--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,10 +4,8 @@ uvicorn[standard]==0.24.0
 pydantic==2.5.0
 python-multipart==0.0.6
 
-# AI/ML dependencies
+# Lightweight ML dependencies
 scikit-learn==1.3.2
-transformers==4.36.0
-torch==2.1.0
 numpy==1.24.3
 
 # Configuration
