--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,6 +6,7 @@ python-multipart==0.0.6
 
 # Lightweight ML dependencies
 scikit-learn==1.3.2
+transformers==4.36.0
 numpy==1.24.3
 
 # Configuration
