--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,6 +7,8 @@ python-multipart==0.0.6
 # Lightweight ML dependencies
 scikit-learn==1.3.2
 transformers==4.36.0
+torch==2.1.0+cpu
+-f https://download.pytorch.org/whl/torch_stable.html
 numpy==1.24.3
 
 # Configuration
