--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,12 +5,12 @@ uvicorn[standard]==0.24.0
 pydantic==2.5.0
 python-multipart==0.0.6
 
-# Lightweight ML dependencies
+# AI/ML dependencies
 scikit-learn==1.3.2
-numpy==1.24.3
 transformers==4.36.0
-torch==2.1.0+cpu
--f https://download.pytorch.org/whl/torch_stable.html
+torch==2.1.0
+numpy==1.24.3
+
 # Configuration
 python-dotenv==1.0.0
 pydantic-settings==2.0.3
