--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,6 +9,7 @@ python-multipart==0.0.6
 scikit-learn==1.3.2
 numpy==1.24.3
 openai==2.1.0
+requests==2.32.5
 # Configuration
 python-dotenv==1.0.0
 pydantic-settings==2.0.3
